--- a/app/index.html
+++ b/app/index.html
@@ -114,7 +114,7 @@
                     <div class="menu-item__button">
                         <input class="menu-item__input visually-hidden" type="checkbox" name="size" id="size-1">
                         <label class="menu-item__label" for="size-1">
-                            <div class="menu-item__switch" data-checked="M" data-unchecked="L"></div>
+                            <span class="menu-item__switch" data-checked="M" data-unchecked="L"></span>
                         </label>
                     </div>
                     <p class="menu-item__text">Нежный ванильный
@@ -141,7 +141,7 @@
                     <div class="menu-item__button">
                         <input class="menu-item__input visually-hidden" type="checkbox" name="size" id="size-2">
                         <label class="menu-item__label" for="size-2">
-                            <div class="menu-item__switch" data-checked="M" data-unchecked="L"></div>
+                            <span class="menu-item__switch" data-checked="M" data-unchecked="L"></span>
                         </label>
                     </div>
                     <p class="menu-item__text">Нежный ванильный
@@ -168,7 +168,7 @@
                     <div class="menu-item__button">
                         <input class="menu-item__input visually-hidden" type="checkbox" name="size" id="size-3">
                         <label class="menu-item__label" for="size-3">
-                            <div class="menu-item__switch" data-checked="M" data-unchecked="L"></div>
+                            <span class="menu-item__switch" data-checked="M" data-unchecked="L"></span>
                         </label>
                     </div>
                     <p class="menu-item__text">Нежный ванильный
@@ -195,7 +195,7 @@
                     <div class="menu-item__button">
                         <input class="menu-item__input visually-hidden" type="checkbox" name="size" id="size-4">
                         <label class="menu-item__label" for="size-4">
-                            <div class="menu-item__switch" data-checked="M" data-unchecked="L"></div>
+                            <span class="menu-item__switch" data-checked="M" data-unchecked="L"></span>
                         </label>
                     </div>
                     <p class="menu-item__text">Нежный ванильный
@@ -222,7 +222,7 @@
                     <div class="menu-item__button">
                         <input class="menu-item__input visually-hidden" type="checkbox" name="size" id="size-5">
                         <label class="menu-item__label" for="size-5">
-                            <div class="menu-item__switch" data-checked="M" data-unchecked="L"></div>
+                            <span class="menu-item__switch" data-checked="M" data-unchecked="L"></span>
                         </label>
                     </div>
                     <p class="menu-item__text">Нежный ванильный
@@ -230,6 +230,95 @@
                         на основе эспрессо,
                         молока и сливок.
                     </p>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="about">
+        <div class="about__inner">
+            <picture class="about__logo">
+                <img src="images/logo-white@1x.png" srcset="images/logo-white@1x.png 1x, images/logo-white@2x.png 2x"
+                    width="173" height="49" alt="Логотип">
+            </picture>
+            <div class="about__description">
+                <h2 class="about__title">О компании</h2>
+                <p class="about__text">ADEPT - это кофейня для ценителей
+                    больших и вкусных рафов,
+                    сложных кофейных напитков
+                    и необычных сочетаниЙ.
+
+                    Мы - эксперементаторы, и
+                    любим вкусный кофе.</p>
+            </div>
+            <ul class="about__list">
+                <li class="about__list-item about-item">
+                    <picture>
+                        <img src="images/about-1@1x.png" alt="Иконка преимуществ" class="about-item__img"
+                            srcset="images/about-1@1x.png 1x, images/about-1@2x.png 2x" width="100" height="100">
+                    </picture>
+                    <h3 class="about-item__title">Качество</h3>
+                    <p class="about-item__text">Для приготовления напитков мы используем только свежий кофе</p>
+                </li>
+                <li class="about__list-item about-item">
+                    <picture>
+                        <img src="images/about-2@1x.png" alt="Иконка преимуществ" class="about-item__img"
+                            srcset="images/about-2@1x.png 1x, images/about-2@2x.png 2x" width="100" height="100">
+                    </picture>
+                    <h3 class="about-item__title">Креативность</h3>
+                    <p class="about-item__text">Мы постоянно эксперементируем, открывая новые необычные сочетания </p>
+                </li>
+                <li class="about__list-item about-item">
+                    <picture>
+                        <img src="images/about-3@1x.png" alt="Иконка преимуществ" class="about-item__img"
+                            srcset="images/about-3@1x.png 1x, images/about-3@2x.png 2x" width="100" height="100">
+                    </picture>
+                    <h3 class="about-item__title">Доступность</h3>
+                    <p class="about-item__text">Находясь в самом центре города, мы имеем весьма демократичные цены</p>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="gallery">
+        <div class="gallery__inner">
+            <h2 class="gallery__title">Галерея</h2>
+            <ul class="gallery__list">
+                <li class="gallery__item gallery__item--cookie">
+                    <picture>
+                        <img class="gallery__img" src="images/photo-1@1x.jpg" alt="Фото"
+                            srcset="images/photo-1@1x.jpg 1x, images/photo-1@2x.jpg 2x" width="130" height="88">
+                    </picture>
+                </li>
+                <li class="gallery__item gallery__item--hall">
+                    <picture>
+                        <img class="gallery__img src="images/photo-2@1x.jpg" alt="Фото"
+                        srcset="images/photo-2@1x.jpg 1x, images/photo-2@2x.jpg 2x" width="130" height="88">
+                    </picture>
+                </li>
+                <li class="gallery__item gallery__item--coffee">
+                    <picture>
+                        <img class="gallery__img" src="images/photo-3@1x.jpg" alt="Фото"
+                        srcset="images/photo-3@1x.jpg 1x, images/photo-3@2x.jpg 2x" width="280" height="167">
+                    </picture>
+                </li>
+                <li class="gallery__item gallery__item--shelf">
+                    <picture>
+                        <img class="gallery__img" src="images/photo-4@1x.jpg" alt="Фото"
+                        srcset="images/photo-4@1x.jpg 1x, images/photo-4@2x.jpg 2x" width="130" height="88">
+                    </picture>
+                </li>
+                <li class="gallery__item gallery__item--arms">
+                    <picture>
+                        <img class="gallery__img" src="images/photo-5@1x.jpg" alt="Фото"
+                            srcset="images/photo-5@1x.jpg 1x, images/photo-5@2x.jpg 2x" width="130" height="88">
+                    </picture>
+                </li>
+                <li class="gallery__item gallery__item--neon">
+                    <picture>
+                        <img class="gallery__img" src="images/photo-6@1x.jpg" alt="Фото"
+                            srcset="images/photo-6@1x.jpg 1x, images/photo-6@2x.jpg 2x" width="280" height="167">
+                    </picture>
                 </li>
             </ul>
         </div>
