webp + animation + small fixes build 1.0

--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,9 @@
                     <div class="top-nav__inner">
                         <button class="toggle toggle--closed toggle--no-js">Меню</button>
                         <picture class="logo">
+                            <source type="image/webp" media="(min-width: 1150px)"
+                                srcset="images/logo-white@1x.webp 1x, images/logo-white@2x.webp 2x">
+                            <source type="image/webp" srcset="images/logo@1x.webp 1x, images/logo-white@2x.webp 2x">
                             <source type="image/png" media="(min-width: 1150px)"
                                 srcset="images/logo-white@1x.png 1x, images/logo-white@2x.png 2x">
                             <img src="images/logo@1x.png" srcset="images/logo@1x.png 1x, images/logo@2x.png 2x"
@@ -88,7 +91,7 @@
                         кофейных напитков и необычных
                         сочетаний.<span class="mobile-hidden">Мы - эксперементаторы, и
                             любим вкусный кофе.</span></p>
-                    <a class="way-btn button-yellow way-btn--no-js" href="">Проложить маршрут</a>
+                    <a class="way-btn button-yellow way-btn--no-js" href="#contacts">Проложить маршрут</a>
                 </section>
 
             </div>
@@ -101,6 +104,7 @@
             <ul class="menu-slider">
                 <li class="menu-slider__item menu-item">
                     <picture>
+                        <source type="image/webp" srcset="images/raff-1@1x.webp 1x, images/raff-1@2x.webp 2x">
                         <img class="menu-item__image menu-item__image--classic" width="100" height="100"
                             src="images/raff-1@1x.png" srcset="images/raff-1@1x.png 1x, images/raff-1@2x.png 2x"
                             alt="Иконка с кофе">
@@ -129,6 +133,7 @@
                 </li>
                 <li class="menu-slider__item menu-item">
                     <picture>
+                        <source type="image/webp" srcset="images/raff-2@1x.webp 1x, images/raff-2@2x.webp 2x">
                         <img class="menu-item__image" width="100" height="100" src="images/raff-2@1x.png"
                             srcset="images/raff-2@1x.png 1x, images/raff-2@2x.png 2x" alt="Иконка с кофе">
                     </picture>
@@ -156,6 +161,7 @@
                 </li>
                 <li class="menu-slider__item menu-item">
                     <picture>
+                        <source type="image/webp" srcset="images/raff-3@1x.webp 1x, images/raff-3@2x.webp 2x">
                         <img class="menu-item__image" width="100" height="100" src="images/raff-3@1x.png"
                             srcset="images/raff-3@1x.png 1x, images/raff-3@2x.png 2x" alt="Иконка с кофе">
                     </picture>
@@ -183,6 +189,7 @@
                 </li>
                 <li class="menu-slider__item menu-item">
                     <picture>
+                        <source type="image/webp" srcset="images/raff-2@1x.webp 1x, images/raff-2@2x.webp 2x">
                         <img class="menu-item__image" width="100" height="100" src="images/raff-2@1x.png"
                             srcset="images/raff-2@1x.png 1x, images/raff-2@2x.png 2x" alt="Иконка с кофе">
                     </picture>
@@ -210,6 +217,7 @@
                 </li>
                 <li class="menu-slider__item menu-item">
                     <picture>
+                        <source type="image/webp" srcset="images/raff-3@1x.webp 1x, images/raff-3@2x.webp 2x">
                         <img class="menu-item__image" width="100" height="100" src="images/raff-3@1x.png"
                             srcset="images/raff-3@1x.png 1x, images/raff-3@2x.png 2x" alt="Иконка с кофе">
                     </picture>
@@ -242,6 +250,7 @@
     <section class="about" id="about">
         <div class="about__inner">
             <picture class="about__logo">
+                <source type="image/webp" srcset="images/logo-white@1x.webp 1x, images/logo-white@2x.webp 2x">
                 <img src="images/logo-white@1x.png" srcset="images/logo-white@1x.png 1x, images/logo-white@2x.png 2x"
                     width="173" height="49" alt="Логотип">
             </picture>
@@ -256,6 +265,7 @@
             <ul class="about__list">
                 <li class="about__list-item about-item">
                     <picture>
+                        <source type="image/webp" srcset="images/about-1@1x.webp 1x, images/about-1@2x.webp 2x">
                         <img src="images/about-1@1x.png" alt="Иконка преимуществ" class="about-item__img"
                             srcset="images/about-1@1x.png 1x, images/about-1@2x.png 2x" width="100" height="100">
                     </picture>
@@ -264,6 +274,7 @@
                 </li>
                 <li class="about__list-item about-item">
                     <picture>
+                        <source type="image/webp" srcset="images/about-2@1x.webp 1x, images/about-2@2x.webp 2x">
                         <img src="images/about-2@1x.png" alt="Иконка преимуществ" class="about-item__img"
                             srcset="images/about-2@1x.png 1x, images/about-2@2x.png 2x" width="100" height="100">
                     </picture>
@@ -272,6 +283,7 @@
                 </li>
                 <li class="about__list-item about-item">
                     <picture>
+                        <source type="image/webp" srcset="images/about-3@1x.webp 1x, images/about-3@2x.webp 2x">
                         <img src="images/about-3@1x.png" alt="Иконка преимуществ" class="about-item__img"
                             srcset="images/about-3@1x.png 1x, images/about-3@2x.png 2x" width="100" height="100">
                     </picture>
@@ -288,36 +300,42 @@
             <ul class="gallery__list">
                 <li class="gallery__item gallery__item--cookie">
                     <picture>
+                        <source type="image/webp" srcset="images/photo-1@1x.webp 1x, images/photo-1@2x.webp 2x">
                         <img class="gallery__img" src="images/photo-1@1x.jpg" alt="Фото"
                             srcset="images/photo-1@1x.jpg 1x, images/photo-1@2x.jpg 2x" width="130" height="88">
                     </picture>
                 </li>
                 <li class="gallery__item gallery__item--hall">
                     <picture>
+                        <source type="image/webp" srcset="images/photo-2@1x.webp 1x, images/photo-2@2x.webp 2x">
                         <img class="gallery__img" src="images/photo-2@1x.jpg" alt="Фото"
                             srcset="images/photo-2@1x.jpg 1x, images/photo-2@2x.jpg 2x" width="130" height="88">
                     </picture>
                 </li>
                 <li class="gallery__item gallery__item--coffee">
                     <picture>
+                        <source type="image/webp" srcset="images/photo-3@1x.webp 1x, images/photo-3@2x.webp 2x">
                         <img class="gallery__img" src="images/photo-3@1x.jpg" alt="Фото"
                             srcset="images/photo-3@1x.jpg 1x, images/photo-3@2x.jpg 2x" width="280" height="167">
                     </picture>
                 </li>
                 <li class="gallery__item gallery__item--shelf">
                     <picture>
+                        <source type="image/webp" srcset="images/photo-4@1x.webp 1x, images/photo-4@2x.webp 2x">
                         <img class="gallery__img" src="images/photo-4@1x.jpg" alt="Фото"
                             srcset="images/photo-4@1x.jpg 1x, images/photo-4@2x.jpg 2x" width="130" height="88">
                     </picture>
                 </li>
                 <li class="gallery__item gallery__item--arms">
                     <picture>
+                        <source type="image/webp" srcset="images/photo-5@1x.webp 1x, images/photo-5@2x.webp 2x">
                         <img class="gallery__img" src="images/photo-5@1x.jpg" alt="Фото"
                             srcset="images/photo-5@1x.jpg 1x, images/photo-5@2x.jpg 2x" width="130" height="88">
                     </picture>
                 </li>
                 <li class="gallery__item gallery__item--neon">
                     <picture>
+                        <source type="image/webp" srcset="images/photo-6@1x.webp 1x, images/photo-6@2x.webp 2x">
                         <img class="gallery__img" src="images/photo-6@1x.jpg" alt="Фото"
                             srcset="images/photo-6@1x.jpg 1x, images/photo-6@2x.jpg 2x" width="280" height="167">
                     </picture>
@@ -332,6 +350,7 @@
             <ul class="reviews__slider">
                 <li class="reviews__item reviews-item">
                     <picture>
+                        <source type="image/webp" srcset="images/author-1@1x.webp 1x, images/author-1@2x.webp 2x">
                         <img src="images/author-1@1x.jpg" srcset="images/author-1@1x.jpg 1x, images/author-1@2x.jpg 2x"
                             alt="Фото автора" class="reviews-item__img" width="134" height="134">
                     </picture>
@@ -362,6 +381,7 @@
                 </li>
                 <li class="reviews__item reviews-item">
                     <picture>
+                        <source type="image/webp" srcset="images/author-2@1x.webp 1x, images/author-2@2x.webp 2x">
                         <img src="images/author-2@1x.jpg" srcset="images/author-2@1x.jpg 1x, images/author-2@2x.jpg 2x"
                             alt="Фото автора" class="reviews-item__img" width="134" height="134">
                     </picture>
@@ -395,6 +415,7 @@
                 </li>
                 <li class="reviews__item reviews-item">
                     <picture>
+                        <source type="image/webp" srcset="images/author-3@1x.webp 1x, images/author-3@2x.webp 2x">
                         <img src="images/author-3@1x.jpg" srcset="images/author-3@1x.jpg 1x, images/author-3@2x.jpg 2x"
                             alt="Фото автора" class="reviews-item__img" width="134" height="134">
                     </picture>
@@ -428,6 +449,7 @@
                 </li>
                 <li class="reviews__item reviews-item">
                     <picture>
+                        <source type="image/webp" srcset="images/author-1@1x.webp 1x, images/author-1@2x.webp 2x">
                         <img src="images/author-1@1x.jpg" srcset="images/author-1@1x.jpg 1x, images/author-1@2x.jpg 2x"
                             alt="Фото автора" class="reviews-item__img" width="134" height="134">
                     </picture>
@@ -458,6 +480,7 @@
                 </li>
                 <li class="reviews__item reviews-item">
                     <picture>
+                        <source type="image/webp" srcset="images/author-2@1x.webp 1x, images/author-2@2x.webp 2x">
                         <img src="images/author-2@1x.jpg" srcset="images/author-2@1x.jpg 1x, images/author-2@2x.jpg 2x"
                             alt="Фото автора" class="reviews-item__img" width="134" height="134">
                     </picture>
@@ -499,6 +522,7 @@
             <ul class="contacts__list">
                 <li class="contacts__item">
                     <picture>
+                        <source type="image/webp" srcset="images/location@1x.webp 1x, images/location@2x.webp 2x">
                         <img class="contacts__icon" src="images/location@1x.png"
                             srcset="images/location@1x.png 1x, images/location@2x.png 2x" alt="Иконка" width="18"
                             height="27">
@@ -510,6 +534,7 @@
                 </li>
                 <li class="contacts__item">
                     <picture>
+                        <source type="image/webp" srcset="images/phone-reverse@1x.webp 1x, images/phone-reverse@2x.webp 2x">
                         <img class="contacts__icon" src="images/phone-reverse@1x.png"
                             srcset="images/phone-reverse@1x.png 1x, images/phone-reverse@2x.png 2x" alt="Иконка"
                             width="22" height="22">
@@ -518,6 +543,7 @@
                 </li>
                 <li class="contacts__item">
                     <picture>
+                        <source type="image/webp" srcset="images/mail@1x.webp 1x, images/mail@2x.webp 2x">
                         <img class="contacts__icon" src="images/mail@1x.png"
                             srcset="images/mail@1x.png 1x, images/mail@2x.png 2x" alt="Иконка" width="22" height="22">
                     </picture>
@@ -553,8 +579,10 @@
     <footer class="main-footer footer">
         <div class="footer__inner">
             <picture class="footer__logo">
-                <img class="footer__logo-img" src="images/logo-white@1x.png" srcset="images/logo-white@1x.png 1x, images/logo-white@2x.png 2x"
-                    width="115" height="36" alt="Логотип">
+                <source type="image/webp" srcset="images/logo-white@1x.webp 1x, images/logo-white@2x.webp 2x">
+                <img class="footer__logo-img" src="images/logo-white@1x.png"
+                    srcset="images/logo-white@1x.png 1x, images/logo-white@2x.png 2x" width="115" height="36"
+                    alt="Логотип">
             </picture>
             <ul class="footer__social social">
                 <li class="social__item">
@@ -584,17 +612,11 @@
     </footer>
 
 
-
-
-
-
-
-
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/slider.js"></script>
+    <script src="js/min/main.min.js"></script>
+    <script src="js/min/slider.min.js"></script>
+
 </body>
 
 </html>
