Fixing ruble-icon and assembly

--- a/app/index.html
+++ b/app/index.html
@@ -111,8 +111,7 @@
                     </picture>
                     <h3 class="menu-item__title">Классический
                         раф</h3>
-                    <p class="menu-item__price">170
-                        <svg class="menu-item__ruble-white" width="19" height="21">
+                    <p class="menu-item__price">170<svg class="menu-item__ruble-white" width="19" height="21">
                             <use xlink:href="#ruble-white"></use>
                         </svg>
                         <svg class="menu-item__ruble" width="19" height="21">
@@ -139,8 +138,7 @@
                     </picture>
                     <h3 class="menu-item__title">Цитрусовый
                         раф</h3>
-                    <p class="menu-item__price">220
-                        <svg class="menu-item__ruble-white" width="19" height="21">
+                    <p class="menu-item__price">220<svg class="menu-item__ruble-white" width="19" height="21">
                             <use xlink:href="#ruble-white"></use>
                         </svg>
                         <svg class="menu-item__ruble" width="19" height="21">
@@ -167,8 +165,7 @@
                     </picture>
                     <h3 class="menu-item__title">Раф
                         баунти</h3>
-                    <p class="menu-item__price">180
-                        <svg class="menu-item__ruble-white" width="19" height="21">
+                    <p class="menu-item__price">180<svg class="menu-item__ruble-white" width="19" height="21">
                             <use xlink:href="#ruble-white"></use>
                         </svg>
                         <svg class="menu-item__ruble" width="19" height="21">
@@ -195,8 +192,7 @@
                     </picture>
                     <h3 class="menu-item__title">Цитрусовый
                         раф</h3>
-                    <p class="menu-item__price">220
-                        <svg class="menu-item__ruble-white" width="19" height="21">
+                    <p class="menu-item__price">220<svg class="menu-item__ruble-white" width="19" height="21">
                             <use xlink:href="#ruble-white"></use>
                         </svg>
                         <svg class="menu-item__ruble" width="19" height="21">
@@ -223,8 +219,7 @@
                     </picture>
                     <h3 class="menu-item__title">Раф
                         баунти</h3>
-                    <p class="menu-item__price">180
-                        <svg class="menu-item__ruble-white" width="19" height="21">
+                    <p class="menu-item__price">180<svg class="menu-item__ruble-white" width="19" height="21">
                             <use xlink:href="#ruble-white"></use>
                         </svg>
                         <svg class="menu-item__ruble" width="19" height="21">
