--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <p class="about__text">ADEPT - это кофейня для ценителей
                 больших и вкусных рафов,
                 сложных кофейных напитков
-                и необычных сочетаниЙ.
+                и необычных сочетаний.
 
                 Мы - эксперементаторы, и
                 любим вкусный кофе.</p>
@@ -610,7 +610,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
     <script src="js/min/main.min.js"></script>
-    <script src="js/min/slider.min.js"></script>
+    <script src="js/min/slider.min.js.js"></script>
 
 </body>
 
