--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                             <use xlink:href="#ruble-white"></use>
                         </svg>
                         <svg class="menu-item__ruble" width="19" height="21">
-                            <use xlink:href="#ruble-white"></use>
+                            <use xlink:href="#ruble"></use>
                         </svg>
                     </p>
                     <div class="menu-item__button">
