--- a/app/index.html
+++ b/app/index.html
@@ -169,7 +169,7 @@
                             <use xlink:href="#ruble-white"></use>
                         </svg>
                         <svg class="menu-item__ruble" width="19" height="21">
-                            <use xlink:href="#ruble-white"></use>
+                            <use xlink:href="#ruble"></use>
                         </svg>
                     </p>
                     <div class="menu-item__button">
@@ -253,7 +253,7 @@
             <p class="about__text">ADEPT - это кофейня для ценителей
                 больших и вкусных рафов,
                 сложных кофейных напитков
-                и необычных сочетаниЙ.
+                и необычных сочетаний.
 
                 Мы - эксперементаторы, и
                 любим вкусный кофе.</p>
